deploy/local/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: fred-the-guardian
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    name: fred-the-guardian
